--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
             <ul class="nav">
                 <li><a href="#home" class="active"><i class="fa fa-home"></i>Home</a></li>
                 <li><a href="#about"><i class="fa fa-user"></i>About</a></li>
-                <li><a href="#services"><i class="fa fa-list"></i>Services</a></li>
-                <li><a href="#portfolio"><i class="fa fa-briefcase"></i>Portfolio</a></li>
+                <li><a href="#services"><i class="fa fa-list"></i>Project</a></li>
+                <li><a href="#portfolio"><i class="fa fa-briefcase"></i>Result</a></li>
                 <li><a href="#contact"><i class="fa fa-comments"></i>Contact</a></li>
             </ul>
         </div>
@@ -40,15 +40,21 @@
 
         <!--Main Content Start -->
         <div class="main-content">
-            <!-- Home Section Start -->
-                <section class="home section" id="home">
+            <!-- Home Section Start Completed-->
+                <section class="home active section" id="home">
                     <div class="container">
                         <div class="row">
                             <div class="home-info padd-15">
-                                <h3 class="hello">Hello, my name is <span class="name">Williem Salim Santoso</span></h3>
-                                <h3 class="my-profession">I'm an <span class="typing">Entrepreneur</span></h3>
-                                <p>Entrepreneur is an individual who identifies opportunities, takes calculated risks, and innovates to create and build new businesses or ventures</p>
-                                <a href="#contact" class="btn hire-me">Hire Me</a>
+                                <h3 class="hello">Halo, nama saya <span class="name">Williem Salim Santoso</span></h3>
+                                <h3 class="my-profession">Saya adalah seorang <span class="typing"></span></h3>
+                                <p>Entrepreneur adalah seseorang yang menciptakan, mengelola, dan mengembangkan bisnis atau usaha dengan 
+                                    mengambil risiko finansial dan operasional guna mencapai tujuan - tujuan tertentu, seperti keuntungan 
+                                    atau pertumbuhan bisnis.
+                                </p>
+                                <p>Web Design adalah proses merancang dan menciptakan tampilan visual serta struktur halaman - halaman sebuah 
+                                    situs web seperti warna, tata letak, tipografi, gambar, dan grafis lainnya agar lebih menarik dan fungsional bagi pengguna.
+                                </p>
+                                <a href="#about" data-section-index="0" class="btn about-me">More About Me</a>
                             </div>
                             <div class="home-img padd-15">
                                 <img src="images/WhatsApp Image 2023-08-14 at 18.46.46.jpeg" alt="">
@@ -56,7 +62,7 @@
                         </div>
                     </div>
                 </section>
-            <!-- Home Section End -->
+            <!-- Home Section End Completed-->
             <!-- About Section Start -->
                 <section class="about section " id="about">
                     <div class="container">
@@ -69,8 +75,10 @@
                             <div class="about-content padd-15">
                                 <div class="row">
                                     <div class="about-text padd-15">
-                                        <h3>I'm Williem Salim Santoso and <span>Entrepreneur</span></h3>
-                                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Veniam, corporis fugit reiciendis necessitatibus repellendus ut consequatur esse facere, tempore fuga harum laborum. Amet in voluptates soluta ratione. Quisquam illo recusandae hic enim nobis sequi tempora, obcaecati quam nihil. Distinctio, ipsum veniam. Perferendis eum quae repellat temporibus obcaecati velit veniam id esse itaque optio! Consectetur, voluptate.</p>
+                                        <h3 class="hello"><span class="name">Williem Salim Santoso</span></h3>
+                                        <p><b class="bold-color">Entrepreneur</b> yang berbisnis di bidang <b class="bold-color">Asset Management</b> serta sebagai Web Designer dan pemain badminton sebagai Hobi. <br>Lulusan dari salah satu kampus terkenal di Sumatera Utara yaitu Mikroskil di kota Medan.
+                                            <br>Yang sedang memberikan <b class="bold-color">Opportunities</b> <b>(terbatas)</b> untuk berbisnis bersama saya di Q4 tahun ini.
+                                        </p>
                                     </div>
                                 </div>
                                 <div class="row">
@@ -82,135 +90,26 @@
                                             <div class="info-item padd-15">
                                                 <p>Age : <span>23</span></p>
                                             </div>
+                                            
                                             <div class="info-item padd-15">
-                                                <p>Website : <span>www.domain.com</span></p>
+                                                <p>Email : <span>williemss91@gmail.com</span></p>
                                             </div>
                                             <div class="info-item padd-15">
-                                                <p>Email : <span>info@gmail.com</span></p>
+                                                <p>Degree : <span>S.Kom</span></p>
                                             </div>
                                             <div class="info-item padd-15">
-                                                <p>Degree : <span>CS</span></p>
-                                            </div>
-                                            <div class="info-item padd-15">
-                                                <p>Phone : <span>+68 8126 0574 688</span></p>
+                                                <p>Phone : <span>0812 6507 4688</span></p>
                                             </div>
                                             <div class="info-item padd-15">
                                                 <p>City : <span>Medan</span></p>
                                             </div>
                                             <div class="info-item padd-15">
-                                                <p>Freelance : <span>Available</span></p>
+                                                <p>Opportunities : <span>5</span></p>
                                             </div>
                                         </div>
                                         <div class="row">
                                             <div class="buttons padd-15">
-                                                <a href="#" class="btn">Download CV</a>
-                                                <a href="#contact" class="btn hire-me">Hire Me</a>
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <div class="skills padd-15">
-                                        <div class="row">
-                                            <div class="skill-item padd-15">
-                                                <h5>JS</h5>
-                                                <div class="progress">
-                                                    <div class="progress-in" style="width : 86%;"></div>
-                                                    <div class="skill-percent">86%</div>
-                                                </div>
-                                            </div> 
-                                            <div class="skill-item padd-15">
-                                                <h5>PHP</h5>
-                                                <div class="progress">
-                                                    <div class="progress-in" style="width : 66%;"></div>
-                                                    <div class="skill-percent">66%</div>
-                                                </div>
-                                            </div> 
-                                            <div class="skill-item padd-15">
-                                                <h5>HTML</h5>
-                                                <div class="progress">
-                                                    <div class="progress-in" style="width : 96%;"></div>
-                                                    <div class="skill-percent">96%</div>
-                                                </div>
-                                            </div> 
-                                            <div class="skill-item padd-15">
-                                                <h5>Bootstrap</h5>
-                                                <div class="progress">
-                                                    <div class="progress-in" style="width : 76%;"></div>
-                                                    <div class="skill-percent">76%</div>
-                                                </div>
-                                            </div> 
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="row">
-                                    <div class="education padd-15">
-                                        <h3 class="title">Education</h3>
-                                        <div class="row">
-                                            <div class="timeline-box padd-15">
-                                                <div class="timeline shadow-dark">
-                                                    <!--timeline item-->
-                                                    <div class="timeline-item">
-                                                        <div class="circle-dot"></div>
-                                                        <h3 class="timeline-date">
-                                                            <i class="fa fa-calendar"></i> 2013 - 2015
-                                                        </h3>
-                                                        <h4 class="timeline-title">Master in Computer Science</h4>
-                                                        <p class="timeline-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Autem accusantium excepturi hic explicabo ut ullam? Obcaecati nam vitae ducimus dolorem eveniet harum delectus! Ut, vitae facilis?</p>
-                                                    </div>
-                                                    <!--timeline item-->
-                                                    <div class="timeline-item">
-                                                        <div class="circle-dot"></div>
-                                                        <h3 class="timeline-date">
-                                                            <i class="fa fa-calendar"></i> 2013 - 2015
-                                                        </h3>
-                                                        <h4 class="timeline-title">Master in Computer Science</h4>
-                                                        <p class="timeline-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Autem accusantium excepturi hic explicabo ut ullam? Obcaecati nam vitae ducimus dolorem eveniet harum delectus! Ut, vitae facilis?</p>
-                                                    </div>
-                                                    <!--timeline item-->
-                                                    <div class="timeline-item">
-                                                        <div class="circle-dot"></div>
-                                                        <h3 class="timeline-date">
-                                                            <i class="fa fa-calendar"></i> 2013 - 2015
-                                                        </h3>
-                                                        <h4 class="timeline-title">Master in Computer Science</h4>
-                                                        <p class="timeline-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Autem accusantium excepturi hic explicabo ut ullam? Obcaecati nam vitae ducimus dolorem eveniet harum delectus! Ut, vitae facilis?</p>
-                                                    </div>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <div class="experience padd-15">
-                                        <h3 class="title">Experience</h3>
-                                        <div class="row">
-                                            <div class="timeline-box padd-15">
-                                                <div class="timeline shadow-dark">
-                                                    <!--timeline item-->
-                                                    <div class="timeline-item">
-                                                        <div class="circle-dot"></div>
-                                                        <h3 class="timeline-date">
-                                                            <i class="fa fa-calendar"></i> 2013 - 2015
-                                                        </h3>
-                                                        <h4 class="timeline-title">Master in Computer Science</h4>
-                                                        <p class="timeline-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Autem accusantium excepturi hic explicabo ut ullam? Obcaecati nam vitae ducimus dolorem eveniet harum delectus! Ut, vitae facilis?</p>
-                                                    </div>
-                                                    <!--timeline item-->
-                                                    <div class="timeline-item">
-                                                        <div class="circle-dot"></div>
-                                                        <h3 class="timeline-date">
-                                                            <i class="fa fa-calendar"></i> 2013 - 2015
-                                                        </h3>
-                                                        <h4 class="timeline-title">Master in Computer Science</h4>
-                                                        <p class="timeline-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Autem accusantium excepturi hic explicabo ut ullam? Obcaecati nam vitae ducimus dolorem eveniet harum delectus! Ut, vitae facilis?</p>
-                                                    </div>
-                                                    <!--timeline item-->
-                                                    <div class="timeline-item">
-                                                        <div class="circle-dot"></div>
-                                                        <h3 class="timeline-date">
-                                                            <i class="fa fa-calendar"></i> 2013 - 2015
-                                                        </h3>
-                                                        <h4 class="timeline-title">Master in Computer Science</h4>
-                                                        <p class="timeline-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Autem accusantium excepturi hic explicabo ut ullam? Obcaecati nam vitae ducimus dolorem eveniet harum delectus! Ut, vitae facilis?</p>
-                                                    </div>
-                                                </div>
+                                                <a href="#contact" data-section-index="1" class="btn hire-me">Mau donks!!</a>
                                             </div>
                                         </div>
                                     </div>
@@ -456,6 +355,9 @@
     </div>
     <!--Style Switch End-->
     <!-- JS Files-->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.0.16/typed.umd.js" 
+    integrity="sha512-+2pW8xXU/rNr7VS+H62aqapfRpqFwnSQh9ap6THjsm41AxgA0MhFRtfrABS+Lx2KHJn82UOrnBKhjZOXpom2LQ==" 
+    crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="js/script.js"></script>
     <script src="js/style-switcher.js"></script>
 </body>
