--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <!-- Aside Start-->
         <div class="aside">
             <div class="logo">
-                <a href="#"><span>A</span>tlas</a>
+                <a href="#"><span>F</span>uture</a>
             </div>
             <div class="nav-toggler">
                 <span></span>
@@ -31,8 +31,8 @@
             <ul class="nav">
                 <li><a href="#home" class="active"><i class="fa fa-home"></i>Home</a></li>
                 <li><a href="#about"><i class="fa fa-user"></i>About</a></li>
-                <li><a href="#services"><i class="fa fa-list"></i>Project</a></li>
-                <li><a href="#portfolio"><i class="fa fa-briefcase"></i>Result</a></li>
+                <li><a href="#project"><i class="fa fa-chart-simple"></i>Project</a></li>
+                <li><a href="#result"><i class="fa fa-briefcase"></i>Result</a></li>
                 <li><a href="#contact"><i class="fa fa-comments"></i>Contact</a></li>
             </ul>
         </div>
@@ -98,7 +98,7 @@
                                                 <p>Degree : <span>S.Kom</span></p>
                                             </div>
                                             <div class="info-item padd-15">
-                                                <p>Phone : <span>0812 6507 4688</span></p>
+                                                <p>Phone : <span>0821 6057 4688</span></p>
                                             </div>
                                             <div class="info-item padd-15">
                                                 <p>City : <span>Medan</span></p>
@@ -111,6 +111,9 @@
                                             <div class="buttons padd-15">
                                                 <a href="#contact" data-section-index="1" class="btn hire-me">Mau donks!!</a>
                                             </div>
+                                            <div class="buttons padd-15">
+                                                <a href="#project" data-section-index="1" class="btn project-me">Project</a>
+                                            </div>
                                         </div>
                                     </div>
                                 </div>
@@ -119,139 +122,107 @@
                     </div>
                 </section>
             <!-- About Section End -->
-            <!-- Services Section Start -->
-                <section class="service section "id="services">
+            <!-- Project Section Start -->
+                <section class="project section "id="project">
                     <div class="container">
                         <div class="row">
                             <div class="section-title padd-15">
-                                <h2>Services</h2>
+                                <h2>Project</h2>
                             </div>
                         </div>
                         <div class="row">
-                            <!-- Service item Start -->
-                            <div class="service-item padd-15">
-                                <div class="service-item-inner">
-                                    <div class="icon">
-                                        <i class="fa fa-mobile-alt"></i>
+                            <!-- Project item Start -->
+                            <div class="project-item padd-15">
+                                <div class="project-item-inner">
+                                    <div class="video">
+                                        <video autoplay muted loop width="100%" height="100%"><source src="images/portofolio/portfolio-vid.mp4" type="video/mp4"></video>
                                     </div>
-                                    <h4>Web Design</h4>
-                                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Molestias culpa possimus necessitatibus.</p>
+                                    <h4>SALTPARTNERS TEAM</h4>
+                                    <p>Jakarta Wisma GKBI</p>
                                 </div>
                             </div>
-                            <!-- Service item End -->
-                            <!-- Service item Start -->
-                            <div class="service-item padd-15">
-                                <div class="service-item-inner">
-                                    <div class="icon">
-                                        <i class="fa fa-laptop-code"></i>
+                            <!-- Project item End -->
+                            <!-- Project item Start -->
+                            <div class="project-item padd-15">
+                                <div class="project-item-inner">
+                                    <div class="video">
+                                        <video autoplay muted loop width="391.5" height="200.2"><source src="images/portofolio/New-Office.mp4" type="video/mp4"></video>
                                     </div>
-                                    <h4>Web Design</h4>
-                                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Molestias culpa possimus necessitatibus.</p>
+                                    <h4>NEW OFFICE</h4>
+                                    <p>SOON</p>
                                 </div>
                             </div>
-                            <!-- Service item End -->
-                            <!-- Service item Start -->
-                            <div class="service-item padd-15">
-                                <div class="service-item-inner">
-                                    <div class="icon">
-                                        <i class="fa fa-palette"></i>
-                                    </div>
-                                    <h4>Web Design</h4>
-                                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Molestias culpa possimus necessitatibus.</p>
+                            <!-- Project item End -->
+                            <div class="row">
+                                <div class="buttons padd-15">
+                                    <a href="#contact" data-section-index="2" class="btn hire-me-1">Mau donks!!</a>
+                                </div>
+                                <div class="buttons padd-15">
+                                    <a href="#result" data-section-index="2" class="btn result-me">Show Result</a>
                                 </div>
                             </div>
-                            <!-- Service item End -->
-                            <!-- Service item Start -->
-                            <div class="service-item padd-15">
-                                <div class="service-item-inner">
-                                    <div class="icon">
-                                        <i class="fa fa-code"></i>
-                                    </div>
-                                    <h4>Web Design</h4>
-                                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Molestias culpa possimus necessitatibus.</p>
-                                </div>
-                            </div>
-                            <!-- Service item End -->
-                            <!-- Service item Start -->
-                            <div class="service-item padd-15">
-                                <div class="service-item-inner">
-                                    <div class="icon">
-                                        <i class="fa fa-search"></i>
-                                    </div>
-                                    <h4>Web Design</h4>
-                                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Molestias culpa possimus necessitatibus.</p>
-                                </div>
-                            </div>
-                            <!-- Service item End -->
-                            <!-- Service item Start -->
-                            <div class="service-item padd-15">
-                                <div class="service-item-inner">
-                                    <div class="icon">
-                                        <i class="fa fa-bullhorn"></i>
-                                    </div>
-                                    <h4>Web Design</h4>
-                                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Molestias culpa possimus necessitatibus.</p>
-                                </div>
-                            </div>
-                            <!-- Service item End -->
                         </div>
                     </div>
                 </section>
-            <!-- Services Section End -->
+            <!-- Project Section End -->
             <!-- portfolio Section Start -->
-                <section class="portfolio section "id="portfolio">
+                <section class="result section "id="result">
                     <div class="container">
                         <div class="row">
                             <div class="section-title padd-15">
-                                <h2>Portfolio</h2>
+                                <h2>Result</h2>
                             </div>
                         </div>
                         <div class="row">
-                                <div class="portfolio-heading padd-15">
-                                    <h2>My Last Projects :</h2>
+                                <div class="result-heading padd-15">
+                                    <h2>Our Result :</h2>
                                 </div>
                         </div>
                         <div class="row">
-                            <!--portfolio item start-->
-                            <div class="portfolio-item padd-15">
-                                <div class="portfolio-item-inner shadow-dark">
-                                    <div class="portfolio-img">
-                                        <img src="images/portofolio/portfolio-1.jpeg" alt="">
+                            <!--result item start-->
+                            <div class="result-item padd-15">
+                                <div class="result-item-inner shadow-dark">
+                                    <div class="result-img">
+                                        <video autoplay muted loop width="100%" height="100%"><source src="images/portofolio/Result1.MOV" type="video/mp4"></video>
+                                        <video>
                                     </div>
                                 </div>
                             </div>
-                            <!--portfolio item end-->
-                             <!--portfolio item start-->
-                             <div class="portfolio-item padd-15">
-                                <div class="portfolio-item-inner shadow-dark">
-                                    <div class="portfolio-img">
-                                        <img src="images/portofolio/portfolio-2.jpeg" alt="">
+                            <!--result item end-->
+                             <!--result item start-->
+                             <div class="result-item padd-15">
+                                <div class="result-item-inner shadow-dark">
+                                    <div class="result-img">
+                                        <img src="images/portofolio/Gambar1.png" alt="">
                                     </div>
                                 </div>
                             </div>
-                            <!--portfolio item end-->
-                             <!--portfolio item start-->
-                             <div class="portfolio-item padd-15">
-                                <div class="portfolio-item-inner shadow-dark">
-                                    <div class="portfolio-img">
-                                        <img src="images/portofolio/portfolio-3.jpeg" alt="">
+                            <!--result item end-->
+                             <!--result item start-->
+                             <div class="result-item padd-15">
+                                <div class="result-item-inner shadow-dark">
+                                    <div class="result-img">
+                                        <img src="images/portofolio/Gambar3.png" alt="">
                                     </div>
                                 </div>
                             </div>
-                            <!--portfolio item end-->
-                             <!--portfolio item start-->
-                             <div class="portfolio-item padd-15">
-                                <div class="portfolio-item-inner shadow-dark">
-                                    <div class="portfolio-img">
-                                        <img src="images/portofolio/portfolio-4.jpeg" alt="">
+                            <!--result item end-->
+                             <!--result item start-->
+                             <div class="result-item padd-15">
+                                <div class="result-item-inner shadow-dark">
+                                    <div class="result-img">
+                                        <img src="images/portofolio/Gambar2.png" alt="">
                                     </div>
                                 </div>
                             </div>
-                            <!--portfolio item end-->
+                            <!--result item end-->  
+                        </div>
+                        <div class="buttons padd-15">
+                            <a href="#contact" data-section-index="3" class="btn hire-me-2">Mau donks!!</a>
                         </div>
                     </div>
                 </section>
-            <!-- portfolio Section end -->
+            <!-- result Section end -->
             <!-- contact Section Start -->
                 <section class="contact section"id="contact">
                     <div class="container">
@@ -260,8 +231,8 @@
                                 <h2>Contact Me</h2>
                             </div>
                         </div>
-                        <h3 class="contact-title padd-15">Have You Any Questions ?</h3>
-                        <h4 class="contact-sub-title padd-15">I'M AT YOUR SERVICES</h4>
+                        <h3 class="contact-title padd-15">Saya bakal open 5 Opportunities</h3>
+                        <h4 class="contact-sub-title padd-15">Untuk Q4 Tahun ini<br>Hubungi saya melewati Social Media dibawah ini!</h4>
                         <div class="row">
                             <!--Contact info item start-->
                             <div class="contact-info-item padd-15">
@@ -274,59 +245,22 @@
                              <!--Contact info item end-->
                              <!--Contact info item start-->
                             <div class="contact-info-item padd-15">
+                                <a href="https://t.me/Williem Salim Santoso">
                                 <div class="icon"><i class="fa fa-brands fa-telegram"></i></div>
                                 <h4>Telegram</h4>
-                                <p>Islamabad</p>
+                                <p>Williem Salim Santoso</p>
+                                </a>
                             </div>
                              <!--Contact info item end-->
                              <!--Contact info item start-->
                             <div class="contact-info-item padd-15">
+                                <a href="mailto:williemss91@gmail.com?subject=I'm%20interested%20in%20your%20business">
                                 <div class="icon"><i class="fa fa-envelope"></i></div>
                                 <h4>Email</h4>
                                 <p>williemss91@gmail.com</p>
+                                </a>
                             </div>
                              <!--Contact info item end-->
-                             
-                        </div>
-                        <h3 class="contact-title padd-15">SEND ME AN EMAIL</h3>
-                        <h4 class="contact-sub-title padd-15">I'M VERY RESPONSIVE TO MESSAGES</h4>
-                        <!--Contact Form -->
-                        <div class="row">  
-                            <div class="contact-form padd-15">
-                                <div class="row">
-                                    <div class="form-item col-6 padd-15">
-                                        <div class="form-group">
-                                            <input type="text" class="form-control" placeholder="Name">
-                                        </div>
-                                    </div>
-                                    <div class="form-item col-6 padd-15">
-                                        <div class="form-group">
-                                            <input type="email" class="form-control" placeholder="Email">
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="row">
-                                    <div class="form-item col-6 padd-15">
-                                        <div class="form-group">
-                                            <input type="text" class="form-control" placeholder="Subject">
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="row">
-                                    <div class="form-item col-6 padd-15">
-                                        <div class="form-group">
-                                            <textarea name="" class="form-control" id="" placeholder="Message"></textarea>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="row">
-                                    <div class="form-item col-6 padd-15">
-                                        <div class="form-group">
-                                            <button type="submit" class="btn">Send Message</button>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
                         </div>
                     </div>
                 </section>
@@ -337,7 +271,7 @@
     <!-- Main Container End-->
     <!--Style Switch Start-->
     <div class="style-switcher">
-        <div class="style-switcher-toggler s-icon">
+        <div class="style-switcher-toggler s-icon ">
             <i class="fas fa-cog fa-spin">
             </i>
         </div>
