--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
                             <div class="project-item padd-15">
                                 <div class="project-item-inner">
                                     <div class="video">
-                                        <video autoplay muted loop width="391.5" height="200.2"><source src="images/portofolio/New-Office.mp4" type="video/mp4"></video>
+                                        <video autoplay muted loop width="100%" height="100%"><source src="images/portofolio/New-Office.mp4" type="video/mp4"></video>
                                     </div>
                                     <h4>NEW OFFICE</h4>
                                     <p>SOON</p>
@@ -183,7 +183,7 @@
                             <div class="result-item padd-15">
                                 <div class="result-item-inner shadow-dark">
                                     <div class="result-img">
-                                        <video autoplay muted loop width="100%" height="100%"><source src="images/portofolio/Result1.MOV" type="video/mp4"></video>
+                                        <video autoplay muted loop width="100%" height="100%"><source src="images/portofolio/Result1.mp4" type="video/mp4"></video>
                                         <video>
                                     </div>
                                 </div>
